# spoof-liquidity-detector

./: .gitignore  README.md  pyproject.toml
data/: sample_account_economics.csv  sample_order_events.csv
examples/: run_demo.py
spoof_liquidity_detector/: __init__.py  cli.py  pipeline.py  schema.py
spoof_liquidity_detector/accounts/: __init__.py  economics.py  profiler.py
spoof_liquidity_detector/features/: __init__.py  builder.py  lifecycle.py
spoof_liquidity_detector/providers/: __init__.py  archive.py  base.py  csv_provider.py  pendle.py  polymarket.py
spoof_liquidity_detector/statistics/: __init__.py  detector.py
tests/: test_account_profiler.py  test_archive_provider.py  test_cli_formatters.py  test_pendle_provider.py  test_pipeline.py  test_polymarket_live_provider.py
