[project]
name = "spoof-liquidity-detector"
version = "0.1.0"
description = "Demo framework for detecting suspicious fleeting liquidity in blockchain limit-order venues."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Research Demo" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
spoof-detector = "spoof_liquidity_detector.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
